# OpenWork

./: README.md
01_A_Python_Implementation_of_Monocular_Slam/: README.md
3dmm/: README.md  main.py
3dmm/mesh/: __init__.py  io.py  render.py  transform.py
3dmm/model/: __init__.py  fit.py  morphabel_model.py  pncc_code.mat
CppData2Python/: CMakeLists.txt  main.cpp  main.py
Cython_example/: CMakeLists.txt  README.md  setup.py  test.py
Cython_example/linux/: CMakeLists.txt  README.md  setup.py
Cython_example/linux/src/: main.cpp  student.cpp  student.h
Cython_example/linux/src/student/: student_module.pxd
Cython_example/linux/src/student/include/: student.h
Cython_example/src/: main.cpp  student.cpp  student.h
Cython_example/src/Pystudent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Cython_example/src/student/: student_module.cpp  student_module.pyx
Cython_example/src/student/lib/: student.lib
Cython_example/win64/: CMakeLists.txt  README.md  setup.py  test.py
Cython_example/win64/src/: image.cpp  image.h  image_module.pxd  image_module.pyx  main.cpp  stb_image.h  stb_image_write.h
Int8Quantization/: test.py  train.py
MonocularSlam/: slam.py
ObjectLeft/: CMakeLists.txt  README.md  main.cpp
SolveLeastSquare/: CMakeLists.txt  solve.cc  solve.py
TamperingDetection/: CMakeLists.txt  README.md  TamperingDetector.cpp  TamperingDetector.hpp  main.cpp
Yolov5-iOS/: Podfile  README.md
Yolov5-iOS/detection/: SceneDelegate.h  main.m
Yolov5-iOS/yolov5s/: bbox.hpp  postprocess.cpp  postprocess.hpp
cuda_tutorial/chapter01/: README.md
cuda_tutorial/chapter02/: README.md
cuda_tutorial/chapter03/: README.md
hdf5/: CMakeLists.txt  main.cpp  main.py
int8_quantization/: quantize.py  readme.txt  train.py
mmengine.example/: README.md  train.py
mmengine.example/configs/: cifar10.py
mmengine.example/dataset/: __init__.py  builder.py  cifar10.py
mmengine.example/models/: __init__.py  builder.py  metric.py  resnet.py
mnist_dnn/: Makefile  README.md
mnist_dnn/src/: data.cc  data.h  image.cc  image.h  main.cc  stb_image.h  stb_image_write.h  tensor.cc  tensor.h
monocular_slam/: README.md  slam.py
smpl/: README.md  smpl.py  util.py  utils.py
sort/: CMakeLists.txt  README.md
sort/data/: det.txt
sort/examples/: main.cc  sort.py
sort/src/: Hungarian.cc  Hungarian.h  KalmanTracker.cc  KalmanTracker.h  sort.cc  sort.h
tiny-dnn/: README.md
yolov5s_ios/: README.md
yolov5s_ios/detection.xcodeproj/: project.pbxproj
(+15 files in other folders)
